--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
+    "node-appwrite": "^14.1.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.54.0",
     "react-phone-input-2": "^2.15.1",
+    "react-profile": "^1.3.3",
     "react-redux": "^9.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
